/**
*   客户端与逻辑服之间的消息定义
*/
syntax = "proto3";
package netproto;

// 错误码
enum E_Code {
    E_ERROR = 0;

    E_OK = 1; // 成功
    E_RELOGIN = 2; // 重复登录
    E_NONE_EXIST = 3; // 账号不存在
    E_UNKNOWN = 4;
    E_SERVER_INTERNAL_ERROR = 5;    // 服务器内部错误，一般是服务器的一个bug造成
    E_INVALID_PARAM = 6; // 无效的参数
    E_INVALID_OPT = 7;     // 无效操作
}

// 心跳
message CS_Tick {
}
message SC_Tick {
}

// 登录
message CS_Login {
    string token = 1;
}
message SC_Login {
    E_Code code = 1; // 登录结果
}

message CS_None{}

// 前100号的消息留给系统用
enum EMsgIds {
    ECS_None = 0;

    // 心跳
    ECS_Tick = 101;
    ESC_Tick = 102;
    ECS_Login = 103;
    ESC_Login = 104;
}
